--- a/responsive-website.html
+++ b/responsive-website.html
@@ -15,6 +15,10 @@
         font-size: 5vw;
         text-align: center;
       }
+      p {
+        column-count: 2;
+        text-align: justify;
+      }
       .tiger img {
         width: 100%;
       }
@@ -55,8 +59,7 @@
           grid-template-columns: repeat(1, 1fr);
         }
       }
-      @media screen and (max-width: 576px) {
-      }
+
       @media screen and (min-width: 577px) and (max-width: 992px) {
         .container {
           grid-template-columns: repeat(2, 1fr);
